--- a/client/src/component/Menu/Menu.css
+++ b/client/src/component/Menu/Menu.css
@@ -22,8 +22,7 @@
     height: 25vh;
     width: 30vw;
     font-family: Playfair Display;
-    text-shadow: 1.8px 1.5px 0 rgb(0, 0, 0), -1.8px -1.8px 0 rgb(0, 0, 0),
-        1.8px -1.8px 0 rgb(0, 0, 0), -1.8px 1.8px 0 rgb(0, 0, 0);
+    text-shadow: 1.8px 1.5px 0 rgb(0, 0, 0), -1.8px -1.8px 0 rgb(0, 0, 0), 1.8px -1.8px 0 rgb(0, 0, 0), -1.8px 1.8px 0 rgb(0, 0, 0);
     color: #fff;
 }
 
@@ -711,5 +710,15 @@
     margin-bottom: 5px;
     background-color: #f5f5f5;
     font-size: 16px;
+    color: #333;
+}
+
+.user-profile {
+    display: flex;
+    top: 2px;
+    border: 1px solid #cccccc00;
+    border-radius: 4px;
+    background-color: #09ceff;
+    font-size: 20px;
     color: #333;
 }
