--- a/client/src/modules/ErrorMessage/ErrorMessage.css
+++ b/client/src/modules/ErrorMessage/ErrorMessage.css
@@ -1,26 +1,97 @@
-.error-message {
-    font-size: 1.5vh;
-    font-size: 1.5vw;
-    margin: auto;
-    width: auto;
-    height: 8vh;
-    font-family: Dhyana;
-    display: grid;
-
-    
-    text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #49ff18, 0 0 30px #49FF18, 0 0 40px #49FF18, 0 0 55px #49FF18, 0 0 75px #49ff18, 2px 1px 2px rgba(255,0,0,0);
-    color: #D20000;
+.error-container {
+    background-color: rgba(255, 255, 255, 0.8); /* Прозрачный белый фон */
+    position: absolute;
+    border-radius: 4px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 80%;
+    max-height: 34vh;
+    width: 30vw;
+    height: 12vw;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    /* transform: translate(-145%, 20%); */
 }
 
-.error-code {
+.error-header {
+    background-color: rgb(17, 255, 0, 0.8);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.8vw 1vw;
+}
+
+.error-title {
     font-weight: bold;
-    height: 0vh;
+    font-size: 1.2vw;
+    /* padding: 1.2vh; */
+}
+
+.close-button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    position: relative;
+    width: 5%;
+    height: 3%;
+    /* left: 8%; */
+    top: -35%;
 }
 
 .error-text {
-    height: 0vh;
+    font-size: 1.2vw;
+}
+.close-button:before,
+.close-button:after {
+    content: "";
+    position: absolute;
+    /* top: -24%; */
+    left: 50%;
+    width: 14%;
+    height: 700%;
+    background-color: white;
+    transform-origin: center;
+    transform: translate(-50%, -50%) rotate(45deg);
 }
 
-.containerLogin {
-    margin-bottom: 20px;
+.close-button:after {
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.error-body {
+    padding: 3.5vh;
+}
+
+.error-footer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0% 6%;
+}
+
+.cancel-button,
+.ok-button {
+    background-color: #a6a6a6;
+    border: none;
+    border-radius: 4px;
+    color: #000000;
+    cursor: pointer;
+    font-size: 1vw;
+    padding: 2% 2%;
+    bottom: 1%;
+    transition: background-color 0.3s;
+}
+
+.cancel-button {
+    margin-right: 2vw;
+}
+
+.ok-button {
+    background-color: rgb(17, 255, 0, 0.8);
+    color: white;
+}
+
+.ok-button:hover {
+    background-color: rgb(17, 255, 0, 0.8);
 }
