--- a/client/src/component/Menu/Menu.css
+++ b/client/src/component/Menu/Menu.css
@@ -22,8 +22,8 @@
     height: 25vh;
     width: 30vw;
     font-family: Playfair Display;
-    text-shadow: 1.8px 1.5px 0 rgb(0, 0, 0), -1.8px -1.8px 0 rgb(0, 0, 0),
-        1.8px -1.8px 0 rgb(0, 0, 0), -1.8px 1.8px 0 rgb(0, 0, 0);
+    text-shadow: 1.8px 1.5px 0 rgb(0, 0, 0), -1.8px -1.8px 0 rgb(0, 0, 0), 1.8px -1.8px 0 rgb(0, 0, 0),
+        -1.8px 1.8px 0 rgb(0, 0, 0);
     color: #fff;
 }
 
@@ -79,7 +79,7 @@
     position: absolute;
     cursor: pointer;
 }
-.hr-line-Invitation{
+.hr-line-Invitation {
     margin-left: 0px;
     margin-right: 0px;
     height: 0.3vw;
@@ -88,7 +88,7 @@
     position: absolute;
     bottom: 3.6vh;
     width: 128.21%;
-    left:-19.2%;
+    left: -19.2%;
 }
 .profile-panel {
     background: rgba(4, 4, 4, 0.69);
@@ -739,8 +739,7 @@
     color: #333;
 } */
 .your-friend {
-    
-    position:relative;
+    position: relative;
     padding: 8px;
     border-radius: 4%;
     margin-top: 5%;
@@ -753,71 +752,73 @@
 .deny {
     width: 20px;
     height: 20px;
-    position:absolute;
+    position: absolute;
     left: 86%;
     cursor: pointer;
     background-color: transparent;
     border: none;
-  }
-  
-  .deny::before, .deny::after {
-    content: '';
+}
+
+.deny::before,
+.deny::after {
+    content: "";
     position: absolute;
     width: 2px;
     height: 100%;
-    top:140%;
+    top: 140%;
     background-color: black;
-  }
-  
-  .deny::before {
+}
+
+.deny::before {
     transform: rotate(45deg);
-  }
-  
-  .deny::after {
+}
+
+.deny::after {
     transform: rotate(-45deg);
-  }
-  
-  .toaccept {
+}
+
+.toaccept {
     left: 78%;
     width: 20px;
     height: 20px;
-    position:absolute;
+    position: absolute;
     cursor: pointer;
     background-color: transparent;
     border: none;
-  }
-  
-  .toaccept::before, .toaccept::after {
-    content: '';
+}
+
+.toaccept::before,
+.toaccept::after {
+    content: "";
     position: absolute;
     width: 1px;
     height: 70%;
     top: 155%;
     background-color: rgb(0, 255, 0);
-  }
-  
-  .toaccept::before {
+}
+
+.toaccept::before {
     transform: rotate(30deg);
-  }
-  
-  .toaccept::after {
-    top:187%;
+}
+
+.toaccept::after {
+    top: 187%;
     left: 17.5%;
     width: 1px;
     height: 40%;
     transform: rotate(-45deg);
-  }
-  .add-friend{
+}
+.add-friend {
     left: 12.5%;
-    top:25%;
+    top: 25%;
     /* position: absolute; */
-  }
-  .add-friend-button{
+}
+.add-friend-button {
     left: 12.5%;
     /* top:28.8%; */
     /* position: absolute; */
-  }
-  .You {
+}
+.You {
     position: absolute;
     top: 1%;
     left: 5%;
@@ -831,10 +832,10 @@
     padding-left: 10px;
     border: 2px solid #333;
     border-radius: 4px;
-  }
-  
-  .You::before {
-    content: "";    
+}
+
+.You::before {
+    content: "";
     display: inline-block;
     width: 14%;
     height: 65%;
@@ -842,9 +843,9 @@
     margin-right: 10%;
     border: 3px solid #333;
     border-radius: 2px;
-  }
-  
-  .You::after {
+}
+
+.You::after {
     content: "";
     position: absolute;
     top: 47%;
@@ -853,16 +854,13 @@
     width: 18%;
     height: 6.6%;
     background-color: #333;
-  }
-  
-  
-  .your-friend-menu{
-    background-color: #f5f5f5;
+}
+
+.your-friend-menu {
     border-radius: 4%;
     font-size: 16px;
     width: 13vw;
     left: 2%;
-    position:relative;
+    position: relative;
     margin-top: 6%;
-    
-  }
+}
